--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 				<div id="welcome"class="card blue-grey darken-1 z-depth-3">
 					<div class="card-content white-text">
 						<span class="card-title">Welcome...</span>
-						<p>Here you will find code snippets for the lunch and learn session. If you get lost, use the navigation bar above to find the relevant snippet. If you get stuck, don't hesitate to ask one of the team.</p>
+						<p>Here you will find code snippets for the lunch and learn session. If you get lost, use the navigation bar above to find the relevant snippet. If you get stuck, don't hesitate to ask one of the team. Test </p>
 					</div>
 
 				</div>
 			</div>
 		</div>
-	</div>
+		</div>
 
 	<div class="container" style="padding-top:100px">
 		<div class="row">
