Added code snippets to website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!--Import Google Icon Font-->
-	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 	<!--Import materialize.css-->
 	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 	<title>Salesforce Lunch and Learn</title>
@@ -14,14 +14,21 @@
 	<!--Import jQuery before materialize.js-->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
+	
+
 	<div class="navbar-fixed">
 		<nav class="blue-grey darken-1">
 			<div class="nav-wrapper">
 				<a href="#" class="brand-logo">&nbsp;&nbsp;Salesforce Lunch and Learn</a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href="#welcome">Welcome</a></li>
-					<li><a href="#apexpage">&lt;apex:page&gt;</a></li>
-					<li><a href="#apexrepeat">&lt;apex:repeat&gt;</a></li>
+					<li><a href="#snippet1">snippet 1</a></li>
+					<li><a href="#snippet2">snippet 2</a></li>
+					<li><a href="#snippet3">snippet 3</a></li>
+					<li><a href="#snippet4">snippet 4</a></li>
+					<li><a href="#snippet5">snippet 5</a></li>
+					<li><a href="#snippet6">snippet 6</a></li>
+					<li><a href="#snippet7">snippet 7</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -35,47 +42,106 @@
 						<span class="card-title">Welcome...</span>
 						<p>Here you will find code snippets for the lunch and learn session. If you get lost, use the navigation bar above to find the relevant snippet. If you get stuck, don't hesitate to ask one of the team.</p>
 					</div>
-
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="container" style="padding-top:100px">
+	<div id="snippet1" class="container" style="padding-top:100px">
 		<div class="row">
 			<div class="col s12 ">
-
-				<div id="apexpage"class="card blue-grey darken-1 z-depth-3">
+				<div class="card blue-grey darken-1 z-depth-3">
 					<div class="card-content white-text">
-						<span class="card-title">&lt;apex:page&gt; code snippet</span>
-						
-						<script class="z-depth-3" src="https://gist.github.com/erickcarvalho/d196e43b08c117c54e0afc2816233b00.js"></script>
+						<span class="card-title">code snippet #1</span>
+						<script src="https://gist.github.com/benewen96/b68a9b84b9b0afc660f30fac74df09d1.js"></script>
 					</div>
-
 				</div>
-				<a class="btn-floating waves-effect waves-light"><i class="material-icons">attach_file</i></a>
 			</div>
 		</div>
 	</div>
+</div>
 
 
-	<div class="container" style="padding-top:100px">
-		<div class="row">
-			<div class="col s12 ">
-
-				<div id="apexrepeat"class="card blue-grey darken-1 z-depth-3">
-					<div class="card-content white-text">
-						<span class="card-title">&lt;apex:repeat&gt; code snippet</span>
-						
-						<script class="z-depth-3" src="https://gist.github.com/erickcarvalho/d196e43b08c117c54e0afc2816233b00.js"></script>
-					</div>
-
+<div id="snippet2" class="container" style="padding-top:100px">
+	<div class="row">
+		<div class="col s12 ">
+			<div class="card blue-grey darken-1 z-depth-3">
+				<div class="card-content white-text">
+					<span class="card-title">code snippet #2</span>
+					<script src="https://gist.github.com/benewen96/937a82e1f0007ae47c4e399dfcb0a721.js"></script>
 				</div>
-				<a class="btn-floating waves-effect waves-light"><i class="material-icons">attach_file</i></a>
 			</div>
 		</div>
 	</div>
+</div>
+
+
+<div id="snippet3" class="container" style="padding-top:100px">
+	<div class="row">
+		<div class="col s12 ">
+			<div class="card blue-grey darken-1 z-depth-3">
+				<div class="card-content white-text">
+					<span class="card-title">code snippet #3</span>
+					<script src="https://gist.github.com/benewen96/9d89ef6c144eccbcbc9d849762733e50.js"></script>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div id="snippet4" class="container" style="padding-top:100px">
+	<div class="row">
+		<div class="col s12 ">
+			<div class="card blue-grey darken-1 z-depth-3">
+				<div class="card-content white-text">
+					<span class="card-title">code snippet #4</span>
+					<script src="https://gist.github.com/benewen96/f2cc7c527bc33705f2ab050ddb0a654a.js"></script>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div id="snippet5" class="container" style="padding-top:100px">
+	<div class="row">
+		<div class="col s12 ">
+			<div class="card blue-grey darken-1 z-depth-3">
+				<div class="card-content white-text">
+					<span class="card-title">code snippet #5</span>
+					<script src="https://gist.github.com/benewen96/6cb0b3b45b38a9aa30b14f7b647cd8f4.js"></script>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div id="snippet6" class="container" style="padding-top:100px">
+	<div class="row">
+		<div class="col s12 ">
+			<div class="card blue-grey darken-1 z-depth-3">
+				<div class="card-content white-text">
+					<span class="card-title">code snippet #6</span>
+					<script src="https://gist.github.com/benewen96/27f66dad56b9bd7cb77321a808e44922.js"></script>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div id="snippet7" class="container" style="padding-top:100px">
+	<div class="row">
+		<div class="col s12 ">
+			<div class="card blue-grey darken-1 z-depth-3">
+				<div class="card-content white-text">
+					<span class="card-title">code snippet #7</span>
+					<script src="https://gist.github.com/benewen96/02875614c9c072aa5bb6b568ee9e5bb5.js"></script>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 </body>
+
+
+
 </html>
+
