add static resources download link to snippet 4

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
 			<div class="card blue-grey darken-1 z-depth-3">
 				<div class="card-content white-text">
 					<span class="card-title">code snippet #4</span>
+					<p>Before adding this code, add this static resource to salesforce.</p>
+					<a href="BackLog_Resources.zip" class="waves-effect waves-light btn">Download</a>
+					<div style="padding-top:15px">
 					<script src="https://gist.github.com/benewen96/f2cc7c527bc33705f2ab050ddb0a654a.js"></script>
+					</div>
 				</div>
 			</div>
 		</div>
