--- a/index.html
+++ b/index.html
@@ -14,30 +14,38 @@
 	<!--Import jQuery before materialize.js-->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
+	<script type="text/javascript">
+		$( document ).ready(function() {
+			$(".snippet-dropdown").dropdown();
+		});
+	</script>
 	
+	<ul id ="snippets" class="dropdown-content">
+		<li><a href="#snippet1">snippet 1</a></li>
+		<li><a href="#snippet2">snippet 2</a></li>
+		<li><a href="#snippet3">snippet 3</a></li>
+		<li><a href="#snippet4">snippet 4</a></li>
+		<li><a href="#snippet5">snippet 5</a></li>
+		<li><a href="#snippet6">snippet 6</a></li>
+		<li><a href="#snippet7">snippet 7</a></li>
+	</ul>
 
 	<div class="navbar-fixed">
 		<nav class="blue-grey darken-1">
 			<div class="nav-wrapper">
 				<a href="#" class="brand-logo">&nbsp;&nbsp;Salesforce Lunch and Learn</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<ul class="right">
 					<li><a href="#welcome">Welcome</a></li>
-					<li><a href="#snippet1">snippet 1</a></li>
-					<li><a href="#snippet2">snippet 2</a></li>
-					<li><a href="#snippet3">snippet 3</a></li>
-					<li><a href="#snippet4">snippet 4</a></li>
-					<li><a href="#snippet5">snippet 5</a></li>
-					<li><a href="#snippet6">snippet 6</a></li>
-					<li><a href="#snippet7">snippet 7</a></li>
+					<li><a class="snippet-dropdown" href="#!" data-activates="snippets">Snippets<i class="material-icons right">arrow_drop_down</i></a></li>
 				</ul>
 			</div>
 		</nav>
 	</div>
 
-	<div class="container" style="padding-top:100px">
+	<div id="welcome" class="container" style="padding-top:100px">
 		<div class="row">
 			<div class="col s12 ">
-				<div id="welcome"class="card blue-grey darken-1 z-depth-3">
+				<div class="card blue-grey darken-1 z-depth-3">
 					<div class="card-content white-text">
 						<span class="card-title">Welcome...</span>
 						<p>Here you will find code snippets for the lunch and learn session. If you get lost, use the navigation bar above to find the relevant snippet. If you get stuck, don't hesitate to ask one of the team.</p>
@@ -97,7 +105,7 @@
 					<p>Before adding this code, add this static resource to salesforce.</p>
 					<a href="BackLog_Resources.zip" class="waves-effect waves-light btn">Download</a>
 					<div style="padding-top:15px">
-					<script src="https://gist.github.com/benewen96/f2cc7c527bc33705f2ab050ddb0a654a.js"></script>
+						<script src="https://gist.github.com/benewen96/f2cc7c527bc33705f2ab050ddb0a654a.js"></script>
 					</div>
 				</div>
 			</div>
