fixed dropdown icon on snippets

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<a href="#" class="brand-logo">&nbsp;&nbsp;Salesforce Lunch and Learn</a>
 				<ul class="right">
 					<li><a href="#welcome">Welcome</a></li>
-					<li><a class="snippet-dropdown" href="#!" data-activates="snippets">Snippets<i class="material-icons right">arrow_drop_down</i></a></li>
+					<li><a class="snippet-dropdown" href="#!" data-activates="snippets">Snippets &#9660;</a></li>
 				</ul>
 			</div>
 		</nav>
