--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 	<script type="text/javascript">
 		$( document ).ready(function() {
 			$(".snippet-dropdown").dropdown();
+			$(".object-dropdown").dropdown();
 		});
 	</script>
+
+	<ul id ="object" class="dropdown-content">
+		<li><a href="Object creation.docx">create objects doc</a></li>
+	</ul>
 	
 	<ul id ="snippets" class="dropdown-content">
 		<li><a href="#snippet1">snippet 1</a></li>
@@ -33,16 +38,18 @@
 	<div class="navbar-fixed">
 		<nav class="blue-grey darken-1">
 			<div class="nav-wrapper">
-				<a href="#" class="brand-logo">&nbsp;&nbsp;Salesforce Lunch and Learn</a>
+				<a class="brand-logo center"><img src="img/LillyLogoWhite.png"/ height="70px"></a>
+				&nbsp;&nbsp;Salesforce Lunch and Learn
 				<ul class="right">
 					<li><a href="#welcome">Welcome</a></li>
+					<li><a class="object-dropdown" href="#!" data-activates="object">Object &#9660;</a></li>
 					<li><a class="snippet-dropdown" href="#!" data-activates="snippets">Snippets &#9660;</a></li>
 				</ul>
 			</div>
 		</nav>
 	</div>
 
-	<div id="welcome" class="container" style="padding-top:100px">
+	<div id="welcome" class="container" style="padding-top:40px">
 		<div class="row">
 			<div class="col s12 ">
 				<div class="card blue-grey darken-1 z-depth-3">
@@ -55,7 +62,7 @@
 		</div>
 	</div>
 
-	<div id="snippet1" class="container" style="padding-top:100px">
+	<div id="snippet1" class="container" style="padding-top:40px">
 		<div class="row">
 			<div class="col s12 ">
 				<div class="card blue-grey darken-1 z-depth-3">
@@ -70,7 +77,7 @@
 </div>
 
 
-<div id="snippet2" class="container" style="padding-top:100px">
+<div id="snippet2" class="container" style="padding-top:40px">
 	<div class="row">
 		<div class="col s12 ">
 			<div class="card blue-grey darken-1 z-depth-3">
@@ -84,7 +91,7 @@
 </div>
 
 
-<div id="snippet3" class="container" style="padding-top:100px">
+<div id="snippet3" class="container" style="padding-top:40px">
 	<div class="row">
 		<div class="col s12 ">
 			<div class="card blue-grey darken-1 z-depth-3">
@@ -96,7 +103,7 @@
 		</div>
 	</div>
 </div>
-<div id="snippet4" class="container" style="padding-top:100px">
+<div id="snippet4" class="container" style="padding-top:40px">
 	<div class="row">
 		<div class="col s12 ">
 			<div class="card blue-grey darken-1 z-depth-3">
@@ -112,7 +119,7 @@
 		</div>
 	</div>
 </div>
-<div id="snippet5" class="container" style="padding-top:100px">
+<div id="snippet5" class="container" style="padding-top:40px">
 	<div class="row">
 		<div class="col s12 ">
 			<div class="card blue-grey darken-1 z-depth-3">
@@ -124,7 +131,7 @@
 		</div>
 	</div>
 </div>
-<div id="snippet6" class="container" style="padding-top:100px">
+<div id="snippet6" class="container" style="padding-top:40px">
 	<div class="row">
 		<div class="col s12 ">
 			<div class="card blue-grey darken-1 z-depth-3">
@@ -137,7 +144,7 @@
 	</div>
 </div>
 
-<div id="snippet7" class="container" style="padding-top:100px">
+<div id="snippet7" class="container" style="padding-top:40px">
 	<div class="row">
 		<div class="col s12 ">
 			<div class="card blue-grey darken-1 z-depth-3">
